# cpp-advenced

./: .gitignore  CMakeLists.txt  README.md
cmake/: BuildFlags.cmake  SeminarUtils.cmake  TestSolution.cmake
tasks/: CMakeCache.txt
tasks/any/: any.h
tasks/bind_front/: CMakeLists.txt  bind_front.h  readme.md  test.cpp
tasks/buffered-channel/: buffered_channel.h  scorer.py
tasks/compile-eval/: another_pow.h  determinant.h  hash.h  next_prime.h  pow.h  readme.md  sqrt.h
tasks/compressed_pair/: compressed_pair.h  readme.md
tasks/concepts/: .tester.json  CMakeLists.txt  concepts.h  readme.md  test.cpp
tasks/constexpr-map/: constexpr_map.h  constexpr_string.h  sort.h
tasks/cow-vector/: .tester.json  README.md  cow_vector.h
tasks/curry/: .tester.json  CMakeLists.txt  curry.h  readme.md  test.cpp
tasks/dedup/: dedup.h
tasks/defer/: defer.h
tasks/deque/: .tester.json
tasks/dungeon/: rogue.h
tasks/editor/: editor.h
tasks/executors/: README.md
tasks/fast-queue/: .tester.json  mpmc.h  run.cpp  scorer.py
tasks/fold/: fold.h
tasks/futex/: .tester.json  mutex.h  readme.md  scorer.py
tasks/gcd/: readme.md
tasks/grep/: grep.h  readme.md
tasks/harakiri/: .tester.json  CMakeLists.txt  harakiri.h  readme.md
tasks/hash-table/: .tester.json  commons.h  concurrent_hash_map.h  readme.md  scorer.py  test.cpp
tasks/intrusive-list/: intrusive_list.h
tasks/is-prime/: .tester.json  is_prime.cpp  readme.md  scorer.py
tasks/jpeg-decoder/: CMakeLists.txt  decoder.cpp  decoder.h  fft.cpp  fft.h  huffman.cpp  huffman.h  readme.md
tasks/jpeg-decoder/baseline/: .tester.json  test_baseline.cpp
tasks/jpeg-decoder/faster/: .tester.json  test_faster.cpp
tasks/jpeg-decoder/fftw/: .tester.json  fuzz_fft.cpp  test_fft.cpp
tasks/jpeg-decoder/huffman/: .tester.json  fuzz_huffman.cpp  test_huffman.cpp
tasks/jpeg-decoder/jpeg-fuzz/: fuzz_jpeg.cpp
tasks/jpeg-decoder/progressive/: .tester.json  test_progressive.cpp
tasks/jpeg-decoder/test_utils/: FuzzDataProvider.h
tasks/jpeg-decoder/utils/: init.h  libjpg_reader.h  png_encoder.h  test_commons.hpp
tasks/lru-cache/: .tester.json  lru_cache.cpp  lru_cache.h
tasks/mpsc-stack/: .tester.json  mpsc_stack.h
tasks/multiplication/: .tester.json  multiplication.cpp  multiplication.h  readme.md
tasks/pimpl/: ugly.cpp
tasks/pipes/: CMakeLists.txt  counted.h  pipes.h  readme.md
tasks/pipes/basic/: .tester.json  test.cpp  test_lvalue.cpp
tasks/pipes/mutable/: .tester.json  test.cpp
tasks/pipes/rvalue/: .tester.json  test.cpp
tasks/reallol/: readme.md
tasks/reduce/: .tester.json  reduce.h
tasks/reflection/: .tester.json  CMakeLists.txt  gen.py  gen_solution.py  readme.md  reflection.h  schema.h  test.cpp
tasks/rule-of-5/: readme.md
tasks/rw-lock/: .tester.json  rw_lock.h  test.cpp
tasks/rw-spinlock/: .tester.json  rw_spinlock.h
tasks/safe-transform/: transform.h
tasks/scala-vector/: immutable_vector.h
tasks/scheme/: CMakeLists.txt  error.h  object.h  parser.cpp  parser.h  scheme.cpp  scheme.h  tokenizer.cpp  tokenizer.h
tasks/scheme/advanced/: README.md  test_lambda.cpp
tasks/scheme/basic/: README.md
tasks/scheme/parser/: README.md
tasks/semaphore/: .tester.json  sema.h  test.cpp
tasks/simple_defer/: .tester.json  CMakeLists.txt  readme.md  simple_defer.h  test.cpp
tasks/small-test-framework/: test.h
tasks/smart-ptrs/: CMakeLists.txt  compressed_pair.h  readme.md  shared.h  unique.h  weak.h
tasks/smart-ptrs/shared_basic/: .tester.json  test.cpp
tasks/smart-ptrs/shared_from_this/: .tester.json  test.cpp
tasks/smart-ptrs/shared_weak/: .tester.json  test.cpp
tasks/smart-ptrs/unique_advanced/: .tester.json  test.cpp
tasks/smart-ptrs/unique_basic/: .tester.json  test.cpp
tasks/solve_or_die/: .tester.json
tasks/stdflib/: .tester.json  CMakeLists.txt  readme.md  stdflib.h  test.cpp
tasks/string-operations/: .tester.json  readme.md  string_operations.cpp  string_operations.h
tasks/string-view/: .tester.json  string_view.h  test.cpp
tasks/subset-sum/: .tester.json  scorer.py
tasks/timerqueue/: .tester.json  README.md  timerqueue.h
tasks/transform_tuple/: .tester.json  CMakeLists.txt  readme.md  test.cpp  transform_tuple.h
tasks/tryhard/: try.h
tasks/unbuffered-channel/: .tester.json  scorer.py  unbuffered_channel.h
